--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,18 @@
+@import "ember-power-calendar";
+
+@import "./components/invoice-list-row";
+
 @import "./pages/invoices-index-page";
 
+.demo-calendar-small {
+  @include ember-power-calendar($cell-size: 30px);
+}
+.demo-calendar-medium {
+  @include ember-power-calendar($cell-size: 50px);
+}
+.demo-calendar-big {
+  @include ember-power-calendar($cell-size: 70px);
+}
 
 body {
   background-color: #ffffff;
@@ -17,11 +30,22 @@ body {
   flex-direction: column;
 }
 
+.fg-1 {
+  flex-grow: 1;
+}
+
 .df-jcsb-aic {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.margin-left-20 {
+  margin-left: 20px;
+}
+.margin-top-20 {
+  margin-top: 20px;
 }
 
 .loading-spinner {
