--- a/app/templates/invoices/new.hbs
+++ b/app/templates/invoices/new.hbs
@@ -12,11 +12,11 @@
       {{fa-icon "chevron-left" class="margin-right-20"}}Cancel
     {{/link-to}}
   {{else}}
-    <h1>Success! {{fa-icon "check" class="margin-left-200"}}</h1>
+    <h1>Success! {{fa-icon "check"}}</h1>
 
     <div class="dfc">
       <p><strong>Id: </strong>{{model.id}}</p>
-      <p><strong>Date: </strong>{{moment-format (if model.date model.date (now)) "DD-MM-YYYY"}}</p>
+      <p><strong>Date: </strong>{{moment-format model.date "DD-MM-YYYY"}}</p>
       <p><strong>Amount: </strong>{{if model.amount model.amount "-"}}</p>
     </div>
 
