--- a/app/templates/components/invoice-list-row.hbs
+++ b/app/templates/components/invoice-list-row.hbs
@@ -1,2 +1,7 @@
 <div>{{moment-format invoice.date "YYYY-MM-DD"}}</div>
 <div>{{if invoice.amount invoice.amount "-"}}</div>
+<div>
+  {{#link-to "invoices.edit" invoice tagName="button" class="invoice-list-row__btn"}}
+    {{fa-icon "pencil"}}
+  {{/link-to}}
+</div>
