--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -82,8 +82,8 @@ body {
     z-index: 1;
     position: absolute;
     opacity: .5;
-    top: calc(50% - 20px);
-    left: calc(50% - 20px);
+    top: calc(50% - 20px - 4px);
+    left: calc(50% - 20px - 4px);
     width: 40px;
     height: 40px;
     animation: spin 1s linear infinite;
