updated styles and layout

--- a/app/templates/invoices/index.hbs
+++ b/app/templates/invoices/index.hbs
@@ -3,50 +3,48 @@
 
   {{#link-to "invoices.new" class="btn-primary"}}New Invoice{{/link-to}}
 
-  <div class="df">
-    <div>
-      {{#power-calendar
-        class="demo-calendar-small margin-top-20"
-        center=center
-        selected=selected
-        onCenterChange=(action (mut center) value="moment")
-        onSelect=(action "updateDay" value="moment")
-      as |calendar|}}
-        <div class={{if findInvoicesTask.isRunning "btn-loading-spinner"}}>
-          {{calendar.nav}}
-          {{calendar.days}}
-        </div>
-      {{/power-calendar}}
-    </div>
-
-    <div class="dfc fg-1 margin-left-20">
-      <h3>
-        For:
-        {{#if selected}}
-          {{moment-format selected "YYYY-MM-DD"}}
-          {{fa-icon "window-close" click=(action "updateDay" selected)}}
-        {{else}}
-          All dates
-        {{/if}}
-      </h3>
-
-      <div class="dfc fg-1 {{if findInvoicesTask.isRunning "loading-spinner"}}">
-        {{#each invoices as |invoice|}}
-          {{invoice-list-row
-            invoice=invoice
-            destroyInvoice=(action "destroyInvoice")}}
-        {{else}}
-          {{#if findInvoicesTask.isIdle}}
-            <h2>Not found records</h2>
-          {{/if}}
-        {{/each}}
+  <div class="calendar-wrap">
+    {{#power-calendar
+      class="demo-calendar-smalll asdasd demo-calendar-mediumm margin-top-200"
+      center=center
+      selected=selected
+      onCenterChange=(action (mut center) value="moment")
+      onSelect=(action "updateDay" value="moment")
+    as |calendar|}}
+      <div class={{if findInvoicesTask.isRunning "btn-loading-spinner"}}>
+        {{calendar.nav}}
+        {{calendar.days}}
       </div>
+    {{/power-calendar}}
+  </div>
 
-      {{#if invoices}}
-        <p>
-          <strong>Total: {{totalAmount}}</strong>
-        </p>
+  <div class="dfc fg-1">
+    <h3>
+      Selected date:
+      {{#if selected}}
+        {{moment-format selected "YYYY-MM-DD"}}
+        {{fa-icon "window-close" click=(action "updateDay" selected)}}
+      {{else}}
+        All dates
       {{/if}}
+    </h3>
+
+    <div class="dfc fg-1 {{if findInvoicesTask.isRunning "loading-spinner"}}">
+      {{#each invoices as |invoice|}}
+        {{invoice-list-row
+          invoice=invoice
+          destroyInvoice=(action "destroyInvoice")}}
+      {{else}}
+        {{#if findInvoicesTask.isIdle}}
+          <h2>Nothing found for: {{moment-format selected "YYYY-MM-DD"}}</h2>
+        {{/if}}
+      {{/each}}
     </div>
+
+    {{#if invoices}}
+      <p>
+        <strong>Total: {{totalAmount}}</strong>
+      </p>
+    {{/if}}
   </div>
 </div>
