--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,19 +1,18 @@
+/* addons styles */
 @import "ember-power-calendar";
 
-@import "./components/invoice-list-row";
-
+/* pages styles */
 @import "./pages/invoices-index-page";
 @import "./pages/invoices-new-page";
 @import "./pages/invoices-edit-page";
 
-.demo-calendar-small {
-  @include ember-power-calendar($cell-size: 30px);
-}
-.demo-calendar-medium {
-  @include ember-power-calendar($cell-size: 50px);
-}
-.demo-calendar-big {
-  @include ember-power-calendar($cell-size: 70px);
+/* components styles */
+@import "./components/invoice-list-row";
+
+
+/* base styles */
+body {
+  font-size: 18px;
 }
 
 body {
@@ -127,6 +126,79 @@ body {
 
 .margin-top-20 {
   margin-top: 20px;
+}
+
+.calendar-wrap {
+  display: flex;
+  justify-content: center;
+}
+
+.ember-power-calendar {
+  @include ember-power-calendar($cell-size: 50px);
+
+  border: 2px solid #71B03E;
+  border-radius: 8px;
+
+  .ember-power-calendar-nav {
+    background-color: #71B03E;
+  }
+
+  .ember-power-calendar-nav-title {
+    font-size: 22px;
+    font-weight: bold;
+    color: #FFFFFF;
+  }
+
+  .ember-power-calendar-nav-control {
+    font-size: 32px;
+    color: #FFFFFF;
+    padding: 0 20px;
+    cursor: pointer;
+
+    &:focus {
+      color: #FFFFFF;
+    }
+  }
+
+  .ember-power-calendar-weekdays {
+    background-color: #71B03E;
+  }
+
+  .ember-power-calendar-weekday {
+    font-size: 18px;
+    color: #FFFFFF;
+  }
+
+  .ember-power-calendar-row {
+    justify-content: space-around;
+  }
+
+  .ember-power-calendar-day--current-month,
+  .ember-power-calendar-day--interactive {
+    font-size: 22px;
+  }
+
+  .ember-power-calendar-day--focused{
+    box-shadow: none;
+  }
+
+  .ember-power-calendar-day--selected:not([disabled]):hover {
+    background-color: #71B03E;
+    color: #FFFFFF;
+  }
+
+  .ember-power-calendar-day--selected {
+    background-color: #71B03E;
+    font-size: 22px;
+    font-weight: bold;
+    color: #FFFFFF;
+    border-radius: 4px;
+    cursor: pointer;
+
+    &:active  {
+      background-color: darken(#71B03E, 10%);
+    }
+  }
 }
 
 @keyframes spin {
